--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
     "react-svg-drawing": "^1.0.1",
     "reacticon": "^0.0.1",
