--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/reets93/bored-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
